Day 28/terraform-infra/modules/security-groups/main.tf
# Security Group for Application Load Balancer
resource "aws_security_group" "alb" {
    name        = "${var.environment}-${var.project}-alb-sg"
    description = "Security group for Application Load Balancer"
    vpc_id      = var.vpc_id

    ingress {
        description = "HTTP from Internet"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    ingress {
        description = "HTTPS from Internet"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    egress {
        description = "Allow all outbound traffic"
        from_port   = 0
        to_port     = 0
        protocol    = -1
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    tags = merge(
        var.tags, {
            Name = "${var.environment}-${var.project}-internal-alb-sg"
        }
    )
}

# Security Group for Internal Application Load Balancer
resource "aws_security_group" "internal_alb" {
    name = "${var.environment}-${var.project}-internal-alb-sg"
    description = "Security group for Internal Application Load Balancer"
    vpc_id      = var.vpc_id

    ingress {
        description     = "HTTP from Frontend"
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        security_groups = [aws_security_group.frontend.id]
    }

    egress {
        description = "Allow all outbound traffic"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = merge(
        var.tags, {
            Name = "${var.environment}-${var.project}-internal-alb-sg"
        }
    )
}

# Security Group for Bastion Host
resource "aws_security_group" "bastion" {
    name = "${var.environment}-${var.project}-bastion-sg"
    description = "Security group for Bastion host"
    vpc_id = var.vpc_id

    ingress {
        description = "SSH from allowed IPs"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = var.allowed_ssh_cidrs
    }

    egress {
        description = "Allow all outbound traffic"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = merge(
        var.tags, {
            Name = "${var.environment}-${var.project}-bastion-sg"
        }
    )
}

# Security Group for Frontend EC2 Instances
resource "aws_security_group" "frontend" {
    name        = "${var.environment}-${var.project}-frontend-sg"
    description = "Security group for Frontend application servers"
    vpc_id      = var.vpc_id

    ingress {
        description     = "HTTP from ALB"
        from_port       = 3000
        to_port         = 3000
        protocol        = "tcp"
        security_groups = [ aws_security_group.alb.id ]    
    }

    ingress {
        description = "SSH from Bastion"
        from_port       = 22
        to_port         = 22
        protocol        = "tcp"
        security_groups = [ aws_security_group.bastion.id]
    }

    egress {
        description = "Allow all outbound traffic"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = merge(
        var.tags, {
            Name = "${var.environment}-${var.project}-frontend-sg"
        }
    )
}

# Security Group for Backend EC2 Instances
resource "aws_security_group" "backend" {
    name        = "${var.environment}-${var.project}-backend-sg"
    description = "Security group for Backend API servers"
    vpc_id      = var.vpc_id

    ingress {
        description     = "API from Internal ALB"
        from_port       = 8080
        to_port         = 8080
        protocol        = "tcp"
        security_groups = [aws_security_group.internal_alb.id]
    }

    ingress {
        description     = "SSH from Bastion"
        from_port       = 22
        to_port         = 22
        protocol        = "tcp"
        security_groups = [aws_security_group.bastion.id]
    }

    egress {
        description = "Allow all outbound traffic"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = merge(
        var.tags, {
            Name = "${var.environment}-${var.project}-backend-sg"
        }
    )
}

# Security Group for RDS PostgreSQL
resource "aws_security_group" "rds" {
    name        = "${var.environment}-${var.project}-rds-sg"
    description = "Security group for RDS PostgreSQL database"
    vpc_id      = var.vpc_id

    ingress {
        description     = "PostgreSQL from Backend"
        from_port       = 5432
        to_port         = 5432
        protocol        = "tcp"
        security_groups = [aws_security_group.backend.id]
    }

    egress {
        description = "No outbound traffic allowed"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = []
    }

    tags = merge(
        var.tags, {
            Name = "${var.environment}-${var.project}-rds-sg"
        }
    )
}
